--- a/src/app/home/calender/calender.component.scss
+++ b/src/app/home/calender/calender.component.scss
@@ -19,8 +19,60 @@
 }
 
 #calender-container {
+  padding: $elem-margin;
   background: getColor(elem-background);
-  height: 100%;
-  width: 100%;
+  height: calc(100% - 2 * #{$elem-margin});
+  width: calc(100% - 2 * #{$elem-margin});
   border-radius: $elem-border-radius;
 }
+
+
+.flex-container {
+  display: flex;
+  height: calc(100% - 12rem - 2 * #{$elem-margin});
+
+  .sub-column {
+    padding: $elem-margin;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    border-bottom-left-radius: $elem-border-radius;
+    border-bottom-right-radius: $elem-border-radius;
+
+    .heading-container {
+      height: 2rem;
+      width: 100%;
+      display: grid;
+      transform: skewY(-5deg);
+      text-align: center;
+      margin: .5rem 0;
+
+      .heading {
+        align-self: center;
+        cursor: default;
+        background: getColor(background);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+
+    .sub-list {
+      background-color: getColor(elem-background-light);
+      border-radius: $elem-border-radius;
+      padding: 0;
+      height: calc(100% - 2rem);
+      list-style: none;
+      max-height: 77rem;
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
+  }
+
+  .recipes {
+    height: 100%;
+    width: 50%;
+  }
+}
+
+
