--- a/src/app/home/searcher/searcher.component.html
+++ b/src/app/home/searcher/searcher.component.html
@@ -19,6 +19,17 @@
       <app-result-item></app-result-item>
       <app-result-item></app-result-item>
       <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
+      <app-result-item></app-result-item>
     </ul>
 
     <div class="pages-nav-container">
