--- a/src/app/home/details/details.component.scss
+++ b/src/app/home/details/details.component.scss
@@ -1,27 +1,28 @@
-@import "vars";
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
 :host {
   padding: $elem-margin;
   position: absolute;
-  top: calc(#{getSize(header-height)} + 2 * #{$elem-margin});
-  left: calc(#{getSize(searcher-width)} + 2 * #{$elem-margin});
-  width: getSize(details-width);
-  height: calc(100% - #{getSize(header-height)} - 4 * #{$elem-margin});
+  top: $header-height;
+  left: $searcher-width;
+  width: $details-width;
+  height: calc(100% - #{$header-height});
 
   @include unscrollableScreenWidth {
-    left: calc(#{$min-screen-width} * .2 + 2 * #{$elem-margin});
+    left: calc(#{$min-screen-width} * .2);
     width: calc(#{$min-screen-width} * .3);
   }
 
   @include unscrollableScreenHeight {
-    height: calc(#{$min-screen-height} - #{$header_height} - 4 * #{$elem-margin});
+    height: calc(#{$min-screen-height} - #{$header_height});
   }
 }
 
 #details-container {
   padding: $elem-margin;
-  background: getColor(elem-background);
-  height: calc(100% -  2 * #{$elem-margin});
+  background: $elem-background;
+  height: 100%;
   border-radius: $elem-border-radius;
 
   .recipe-img-fig {
@@ -42,7 +43,7 @@
       bottom: 0;
       left: 50%;
       transform: translate(-50%, 20%) skewY(-6deg);
-      color: getColor(font-white);
+      color: $font-white;
       font-weight: 700;
       text-transform: uppercase;
       width: 80%;
@@ -55,7 +56,7 @@
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
         padding: 1.0rem 1.0rem;
-        background: getColor(background);
+        background: $background;
       }
     }
   }
@@ -89,7 +90,7 @@
     padding: .5rem;
     font-size: .7rem;
     line-height: 1.4;
-    background-color: getColor(elem-background-light);
+    background-color: $elem-background-light-1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,7 +109,7 @@
         i, div, span {
           font-size: 0.8rem;
           font-weight: 500;
-          color: getColor(font-black);
+          color: $font-black;
         }
 
         .recipe-count {
@@ -130,7 +131,7 @@
       text-align: center;
       width: 90%;
       margin-bottom: .5rem;
-      color: getColor(font-grey);
+      color: $font-grey;
 
       .author-directions-span {
         font-size: 1rem;
@@ -158,5 +159,5 @@
 #details-container:hover .recipe-info-buttons {
   visibility: visible;
   opacity: 1;
-  transform: translateY(-.8rem);
+  transform: translateY(-.1rem);
 }
