--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,5 @@
-@import "vars";
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
 :host {
   position: absolute;
@@ -7,7 +8,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background: getColor(background);
+  background: $background;
 
   @include unscrollableScreenWidth {
     width: $min-screen-width;
