--- a/src/app/home/searcher/result-item/result-item.component.scss
+++ b/src/app/home/searcher/result-item/result-item.component.scss
@@ -1,4 +1,4 @@
-@import "vars";
+@import "abstracts/variables";
 
 .results-link {
   display: flex;
@@ -8,7 +8,7 @@
   text-decoration: none;
 
   &:hover {
-    background-color: getColor(search-item-hoover);
+    background-color: $button-nav-bg-hover;
     transform: translateY(-2px);
   }
 
@@ -34,7 +34,7 @@
 .results-data {
   .results-name {
     font-size: .8rem;
-    color: getColor(font-orange);
+    color: $font-orange;
     text-transform: uppercase;
     font-weight: 600;
     margin-bottom: .3rem;
@@ -42,7 +42,7 @@
 
   .results-author {
     font-size: .5rem;
-    color: getColor(font-grey);
+    color: $font-grey;
     text-transform: uppercase;
     font-weight: 600;
   }
