--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header-container">
   <div class="logo-container">
-    <span class="logo-span"><i class="fas fa-utensils"></i> RecipeManager</span>
+    <span id="logo-span" class="logo-span"><i class="fas fa-utensils"></i> RecipeManager</span>
   </div>
   <div class="nav-container">
     <button class="nav-button"><i class="fas fa-home"></i> Home </button>
